Updated window logic

--- a/Test/index.html
+++ b/Test/index.html
@@ -3,9 +3,11 @@
 <head>
     <title>Tic Tac Toe</title>
 </head>
-<body>
+<body style="user-select: none; -webkit-app-region: drag;">
     <h2>Tic Tac Toe</h2>
-    <button onclick="alert('Electron Working!')">Click Me</button>
+    <button style="-webkit-app-region: no-drag;" onclick="alert('Electron Working!')">Click Me</button>
+
+    <input type="range" style="-webkit-app-region: no-drag;">
 
     <script src="renderer.js"></script>
 </body>
