--- a/Test/index.html
+++ b/Test/index.html
@@ -8,12 +8,14 @@
     <button style="-webkit-app-region: no-drag;" onclick="alert('Electron Working!')">Click Me</button>
 
     <input type="range" style="-webkit-app-region: no-drag;">
-
-<<<<<<< HEAD
     <a href="Other.html" target="#">Child</a>
 
-=======
->>>>>>> 7a8eb59f43968e732b10d8551e742e3109b7390b
+    <button id="btnZoomIn">Zoom In</button>
+    <button id="btnZoomOut">Zoom Out</button>
+    <button id="btnShareData">Share Data</button>
+
     <script src="renderer.js"></script>
+    
 </body>
+
 </html>
